force-app/main/default/objects/tc9_pr__Project_Code__c/tc9_pr__Project_Code__c.object-meta.xml
<CustomObject>
    <description>Maintains both Client and Assignment Level Project Codes for use in Payroll</description>
    <label>Project Code</label>
    <nameField>
        <label>Project Code Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>