force-app/main/default/objects/tc9_pr__Project_Code__c/fields/tc9_et__Allowance_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Allowance_Type__c</fullName>
    <description>Defines the allowance type applicable to Timesheet Activities during interpretation</description>
    <inlineHelpText>Defines the allowance type applicable to Timesheet Activities during interpretation</inlineHelpText>
    <label>Allowance Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Allowance_Types</valueSetName>
    </valueSet>
</CustomField>