force-app/main/default/objects/tc9_pr__Project_Code__c/fields/tc9_et__Invoice_Name__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Invoice_Name__c</fullName>
    <description>Defines the Name that will be used on Invoices for the Project Code. If not populated the name of the record will be used trimmed to 15 characters</description>
    <inlineHelpText>Defines the Name that will be used on Invoices for the Project Code. If not populated the name of the record will be used trimmed to 15 characters</inlineHelpText>
    <label>Invoice Name</label>
    <length>15</length>
    <type>Text</type>
</CustomField>