force-app/main/default/objects/tc9_pr__Project_Code__c/fields/tc9_et__Is_an_Interpretation_Variation__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Is_an_Interpretation_Variation__c</fullName>
    <description>Select Yes to set up the Timesheet Activity as an Interpretation Variation Type.  If yes the Interpretation Variation Type field must be populated.</description>
    <inlineHelpText>Select Yes to set up the Timesheet Activity as an Interpretation Variation Type.  If yes the Interpretation Variation Type field must be populated.</inlineHelpText>
    <label>Is an Interpretation Variation?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Yes_No_Picklists</valueSetName>
    </valueSet>
</CustomField>