force-app/main/default/objects/tc9_pr__Project_Code__c/fields/tc9_et__Variation_Type__c.field-meta.xml
<CustomField>
    <fullName>tc9_et__Variation_Type__c</fullName>
    <description>The Interpretation Variation to which this timesheet activity applies</description>
    <inlineHelpText>The Interpretation Variation to which this timesheet activity applies</inlineHelpText>
    <label>Variation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_et__Interpretation_Variation_Type</valueSetName>
    </valueSet>
</CustomField>