force-app/main/default/objects/tc9_pr__Project_Code__c/fields/tc9_pr__Assignment__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Assignment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Assignment associated with the Project Code</description>
    <inlineHelpText>The Assignment associated with the Project Code</inlineHelpText>
    <label>Assignment</label>
    <referenceTo>tc9_pr__Assignment__c</referenceTo>
    <relationshipLabel>Project Codes</relationshipLabel>
    <relationshipName>Project_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>