force-app/main/default/objects/tc9_pr__Project_Code__c/fields/tc9_pr__Client__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Client__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The Client associated with the Project Code</description>
    <inlineHelpText>The Client associated with the Project Code</inlineHelpText>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Project Codes</relationshipLabel>
    <relationshipName>Project_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>