force-app/main/default/objects/tc9_pr__Project_Code__c/fields/tc9_pr__Status__c.field-meta.xml
<CustomField>
    <fullName>tc9_pr__Status__c</fullName>
    <description>The Status of the Project Code</description>
    <inlineHelpText>The Status of the Project Code</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>tc9_pr__Active_Status_Picklists</valueSetName>
    </valueSet>
</CustomField>