force-app/main/default/objects/tc9_pr__Project_Code__c/fields/tc9_util__Purchase_Order__c.field-meta.xml
<CustomField>
    <fullName>tc9_util__Purchase_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used for Purchase Order allocation to specific Project Codes.</description>
    <inlineHelpText>Used for Purchase Order allocation to specific Project Codes.</inlineHelpText>
    <label>Purchase Order</label>
    <referenceTo>tc9_util__Purchase_Order__c</referenceTo>
    <relationshipLabel>Project Codes</relationshipLabel>
    <relationshipName>Project_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>