force-app/main/default/objects/tc9_pr__Project_Code__c/recordTypes/tc9_et__Timesheet_Activity_Assignment_Level.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Timesheet_Activity_Assignment_Level</fullName>
    <active>true</active>
    <description>A specific timesheet activity used during interpretation that applies at an Assignment level</description>
    <label>Timesheet Activity - Assignment Level</label>
</RecordType>