force-app/main/default/objects/tc9_pr__Project_Code__c/recordTypes/tc9_et__Timesheet_Activity_Client_Level.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Timesheet_Activity_Client_Level</fullName>
    <active>true</active>
    <description>A specific timesheet activity used during interpretation that applies at a Client level</description>
    <label>Timesheet Activity - Client Level</label>
</RecordType>