force-app/main/default/objects/tc9_pr__Project_Code__c/recordTypes/tc9_et__Timesheet_Activity_Template_Level.recordType-meta.xml
<RecordType>
    <fullName>tc9_et__Timesheet_Activity_Template_Level</fullName>
    <active>true</active>
    <description>To be used for template Timesheet Activities.</description>
    <label>Timesheet Activity - Template Level</label>
</RecordType>