force-app/main/default/objects/tc9_pr__Project_Code__c/recordTypes/tc9_pr__Assignment_Level.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Assignment_Level</fullName>
    <active>true</active>
    <description>To be used for assignment level Project Codes</description>
    <label>Assignment Level</label>
</RecordType>