force-app/main/default/objects/tc9_pr__Project_Code__c/recordTypes/tc9_pr__Client_Level.recordType-meta.xml
<RecordType>
    <fullName>tc9_pr__Client_Level</fullName>
    <active>true</active>
    <description>To be used for client level Project Codes</description>
    <label>Client Level</label>
</RecordType>