force-app/main/default/objects/tc9_pr__Project_Code__c/listViews/tc9_et__All.listView-meta.xml
<ListView>
    <fullName>tc9_et__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>